api token improvements

--- a/TheShortener/App.config
+++ b/TheShortener/App.config
@@ -7,8 +7,8 @@
     <AppContextSwitchOverrides value="Switch.System.Net.DontEnableSchUseStrongCrypto=false" />
   </runtime>
     <appSettings>
-      <add key="BitlyApiToken" value="1ed0c41fea1d27efe1a2ca0b2d8d0a79d3cace81"/>
       <add key="BitlyApiUrl" value="https://api-ssl.bitly.com/shorten?access_token={0}&amp;longUrl={1}"/>
+      <add key="BitlyApiTokenFileName" value="apiToken.json"/>
     </appSettings>
 
 </configuration>
